--- a/client/package.json
+++ b/client/package.json
@@ -29,11 +29,14 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "express": "^4.14.0",
+    "notie": "^4.3.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-notification-system": "^0.2.14",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "toastr": "^2.1.2",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
