--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
     "express": "~4.13.4",
+    "halogen": "^0.2.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.0",
     "morgan": "~1.7.0",
