--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-spinkit": "^3.0.0",
+    "react-transition-group": "^1.1.3",
     "reactjs-spinner": "^2.0.0",
     "redux": "^3.6.0",
     "toastr": "^2.1.2",
