--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-session": "^2.0.0-beta.1",
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
+    "dustjs-linkedin": "^2.7.5",
     "express": "~4.13.4",
     "halogen": "^0.2.0",
     "jade": "~1.11.0",
