--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "halogen": "^0.2.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.0",
+    "klei-dust": "^1.0.0",
     "morgan": "~1.7.0",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
