--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
-    "cookie-session": "^2.0.0-beta.1",
+    "cookie-session": "^2.0.0-beta.2",
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
     "dustjs-linkedin": "^2.7.5",
@@ -17,7 +17,9 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.0",
     "klei-dust": "^1.0.0",
+    "mongoose": "^4.10.5",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "serve-favicon": "~2.3.0"
