--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^2.0.0-beta.2",
@@ -20,6 +21,7 @@
     "mongoose": "^4.10.5",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "serve-favicon": "~2.3.0"
